﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version vNext
	General description:

	Bug fixes:
		-[Core] Custom KnownDependency instances that where added during the interception (ExpressionBuilding)
		 of a decorator type (RegisterDecorator) where not added to the decorated registration. (work item 19391)


Version v2.0.0 (v2.0 RTM) 2013-02-25
	General description:
		This major release adds explicit lifestyle support and Debugger Diagnostic Services to the Core
		library. The addition of explicit lifestyle support makes it easier to register types in any given
		lifestyle, and the Lifestyle.Hybrid makes it really easy to create a registration that mixes
		any number of lifestyles together. The Diagnostic Services help you to spot common configuration and
		programming mistakes such as lifestyle mismatches, and short circuited dependencies.

	New features:
		-[Core] Diagnostic Debug View added to give feedback on possible misconfigurations in the
		 container. See here for more information: https://simpleinjector.codeplex.com/wikipage?title=Diagnostics
		-[Core] Lifestyle base class added for implementing custom lifestyle management. Default lifestyles
		 are Lifestyle.Transient and Lifestyle.Singleton and a Lifestyle.CreateHybrid() method to create
		 hybrid lifestyles and a Lifestyle.CreateCustom() method to create a lifestyle based on a name and
		 a supplied delegate. Other lifestyle classes are implemented in the integration and extension
		 libraries.
		-[Core] Register overloads added that take Lifetyle as argument.
		-[Core] ExpressionBuilding event added. The ExpressionBuilding event gets fired right after the
		 expression is built that creates a new instance, but before instance initializers and lifestyle
		 caching gets added to the expression.
		-[Core] AddRegistration(Type, Registration) method added to allow directly adding a registration.
		 This allows binding two or more service types to the same implementation.